--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: postgres
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: password
+    env_file:
+      - .env   
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -14,3 +14,7 @@ services:
       - "3000:3000"
     depends_on:
       - db
+    environment:
+     - POSTGRES_HOST=db
+    env_file:
+      - .env
