--- a/.github/workflows/simplecov.yml
+++ b/.github/workflows/simplecov.yml
@@ -1,7 +1,7 @@
-name: Rspec
+name: Simplecov
 on: [push]
 jobs:
-  Rspec:
+  Simplecov:
     runs-on: ubuntu-latest
     services:
       db:
@@ -14,8 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     # Use the action we created in action.yml file to install dependencies.
     - uses: ./.github/actions/setup-rails-app
-    # Run rspec tests
-    - name: Run Rspec
+    - name: Run Simplecov
       env:
         DATABASE_URL: postgres://postgres:@localhost:5432/test
         REDIS_URL: redis://localhost:6379/0
@@ -24,4 +23,10 @@ jobs:
         POSTGRES_PASSWORD: postgres
       run: |
         bundle exec rake db:setup
-        bundle exec rspec  
+        bundle exec rspec --format SimpleCov
+
+    - name: Coverage Report
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage
+        path: coverage
